src/nonogram/nonogram.css
.nonogram {
  display: flex;
  max-width: 100%;
}

/* ^Indicator */
.nonogram-indicator-panel {
  display: flex; flex-wrap: nowrap; align-items: flex-end;
}
.nonogram-indicator-panel.row {
  flex-direction: column; justify-content: flex-end;
}
.nonogram-indicator {
  display: flex;
  flex-wrap: nowrap;
  min-width: 50px; min-height: 50px;
}
.nonogram-indicator.col {
  border-left: 1px solid transparent;
  flex-direction: column;
}
.nonogram-indicator.row {
  border-top: 1px solid transparent;
  justify-content: flex-end;
}

.nonogram-indicator-item {
  display: flex; justify-content: center; align-items: center;
  padding-left: 4px; padding-right: 4px;
}

/* ^Game Board */
.nonogram-row {
  display: flex; flex-wrap: nowrap;
}

.nonogram-cell {
  border: 1px solid black;
  display: inline-block;
  font-size: 40px; line-height: 50px;
  width: 50px; height: 50px;
  text-align: center;
}
.nonogram-cell:not(:last-child) {
  border-right: none;
}
.nonogram-row:not(:last-child) .nonogram-cell {
  border-bottom: none;
}

.nonogram-cell.checked {
  background-color: black;
}
.nonogram-cell.excluded:before {
  content: '✖';
}

